changed markdown and publishing to lowercase as a npm requirement

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressValidation",
+  "name": "expressvalidation",
   "version": "0.0.1",
   "description": "Validation for express",
   "author": "Jamie Fisher <devjamiefisher@gmail.com>",
